refactor: Move datasource into GraphBuilderFactory to create pure create methods.